# RLBotCPP

./: .gitmodules  CMakeLists.txt  README.md  examplebot.cc  examplebot.cpp  examplebot.h  main.cc  main.cpp
dlls/: copy-dlls.py
inc/: bot.h  botmanager.h  botprocess.h  color.h  errorcodes.h  flatbuffercontainer.h  interface.h  matchsettings.h  namedrenderer.h  packets.h  platform.h  renderer.h  rlbot.h  rlbot_generated.h  scopedrenderer.h  server.h  sockets.h  statesetting.h
inc/rlbot/: bot.h  botmanager.h  botprocess.h  controller.h  errorcodes.h  flatbuffercontainer.h  interface.h  matchcomms.h  matchsettings.h  namedrenderer.h  packets.h  platform.h  renderer.h  rlbot_generated.h  scopedrenderer.h  server.h  sockets.h  statesetting.h  tmcp.hpp
lib/inc/: easywsclient.hpp
lib/src/: easywsclient.cpp
rlbot-src/inc/: matchsettings.h  statesetting.h
rlbot-src/lib/inc/flatbuffers/: util.h
rlbot-src/src/: interface.cc  matchsettings.cc
src/: bot.cc  bot.cpp  botmanager.cc  botmanager.cpp  botprocess.cc  color.cc  interface.cc  interface.cpp  matchsettings.cc  namedrenderer.cc  namedrenderer.cpp  platform_linux.cc  platform_windows.cc  renderer.cc  renderer.cpp  scopedrenderer.cc  server.cc  sockets.cc  sockets_linux.cc  sockets_windows.cc  statesetting.cc  statesetting.cpp
